pkg/kgateway/translator/gateway/testutils/outputs/listener-policy/rbac-network-per-port.yaml
Clusters:
- connectTimeout: 5s
  edsClusterConfig:
    edsConfig:
      ads: {}
      resourceApiVersion: V3
  ignoreHealthOnHostRemoval: true
  metadata: {}
  name: kube_default_example-svc_80
  type: EDS
- connectTimeout: 5s
  metadata: {}
  name: test-backend-plugin_default_example-svc_80
Listeners:
- address:
    socketAddress:
      address: '::'
      ipv4Compat: true
      portValue: 80
  filterChains:
  - filters:
    - name: envoy.filters.network.rbac
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
        matcher:
          matcherList:
            matchers:
            - onMatch:
                action:
                  name: envoy.filters.rbac.action
                  typedConfig:
                    '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                    name: allow-request
              predicate:
                singlePredicate:
                  customMatch:
                    name: envoy.matching.matchers.cel_matcher
                    typedConfig:
                      '@type': type.googleapis.com/xds.type.matcher.v3.CelMatcher
                      exprMatch:
                        celExprParsed:
                          expr:
                            callExpr:
                              args:
                              - constExpr:
                                  stringValue: 10.0.0.
                                id: "4"
                              function: startsWith
                              target:
                                id: "2"
                                selectExpr:
                                  field: address
                                  operand:
                                    id: "1"
                                    identExpr:
                                      name: source
                            id: "3"
                          sourceInfo:
                            lineOffsets:
                            - 37
                            location: <input>
                            positions:
                              "1": 0
                              "2": 6
                              "3": 25
                              "4": 26
                  input:
                    name: envoy.matching.inputs.cel_data_input
                    typedConfig:
                      '@type': type.googleapis.com/xds.type.matcher.v3.HttpAttributesCelMatchInput
          onNoMatch:
            action:
              name: action
              typedConfig:
                '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                action: DENY
                name: deny-request
        statPrefix: default_rbac-network-per-port_network_rbac
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: listener~80
        statPrefix: http
        useRemoteAddress: true
    name: listener~80
  metadata:
    filterMetadata:
      merge.ListenerPolicy.gateway.kgateway.dev:
        default.rbacNetworkFilter:
        - gateway.kgateway.dev/ListenerPolicy/default/rbac-network-per-port
        perPortPolicy[8080]:
        - gateway.kgateway.dev/ListenerPolicy/default/rbac-network-per-port
  name: listener~80
- address:
    socketAddress:
      address: '::'
      ipv4Compat: true
      portValue: 8080
  filterChains:
  - filters:
    - name: envoy.filters.network.rbac
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.rbac.v3.RBAC
        matcher:
          matcherList:
            matchers:
            - onMatch:
                action:
                  name: envoy.filters.rbac.action
                  typedConfig:
                    '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                    action: DENY
                    name: deny-request
              predicate:
                singlePredicate:
                  customMatch:
                    name: envoy.matching.matchers.cel_matcher
                    typedConfig:
                      '@type': type.googleapis.com/xds.type.matcher.v3.CelMatcher
                      exprMatch:
                        celExprParsed:
                          expr:
                            callExpr:
                              args:
                              - constExpr:
                                  stringValue: 192.168.0.
                                id: "4"
                              function: startsWith
                              target:
                                id: "2"
                                selectExpr:
                                  field: address
                                  operand:
                                    id: "1"
                                    identExpr:
                                      name: source
                            id: "3"
                          sourceInfo:
                            lineOffsets:
                            - 40
                            location: <input>
                            positions:
                              "1": 0
                              "2": 6
                              "3": 25
                              "4": 26
                  input:
                    name: envoy.matching.inputs.cel_data_input
                    typedConfig:
                      '@type': type.googleapis.com/xds.type.matcher.v3.HttpAttributesCelMatchInput
          onNoMatch:
            action:
              name: action
              typedConfig:
                '@type': type.googleapis.com/envoy.config.rbac.v3.Action
                name: allow-request
        statPrefix: default_rbac-network-per-port_network_rbac
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: listener~8080
        statPrefix: http
        useRemoteAddress: true
    name: listener~8080
  metadata:
    filterMetadata:
      merge.ListenerPolicy.gateway.kgateway.dev:
        default.rbacNetworkFilter:
        - gateway.kgateway.dev/ListenerPolicy/default/rbac-network-per-port
        perPortPolicy[8080]:
        - gateway.kgateway.dev/ListenerPolicy/default/rbac-network-per-port
  name: listener~8080
Routes:
- ignorePortInHostMatching: true
  metadata:
    filterMetadata:
      merge.ListenerPolicy.gateway.kgateway.dev:
        default.rbacNetworkFilter:
        - gateway.kgateway.dev/ListenerPolicy/default/rbac-network-per-port
        perPortPolicy[8080]:
        - gateway.kgateway.dev/ListenerPolicy/default/rbac-network-per-port
  name: listener~80
  virtualHosts:
  - domains:
    - example.com
    name: listener~80~example_com
    routes:
    - match:
        prefix: /
      name: listener~80~example_com-route-0-httproute-example-route-default-0-0-matcher-0
      route:
        cluster: kube_default_example-svc_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
- ignorePortInHostMatching: true
  metadata:
    filterMetadata:
      merge.ListenerPolicy.gateway.kgateway.dev:
        default.rbacNetworkFilter:
        - gateway.kgateway.dev/ListenerPolicy/default/rbac-network-per-port
        perPortPolicy[8080]:
        - gateway.kgateway.dev/ListenerPolicy/default/rbac-network-per-port
  name: listener~8080
  virtualHosts:
  - domains:
    - example.com
    name: listener~8080~example_com
    routes:
    - match:
        prefix: /
      name: listener~8080~example_com-route-0-httproute-example-route-default-0-0-matcher-0
      route:
        cluster: kube_default_example-svc_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
Statuses:
  gateways:
    default/example-gateway:
      conditions:
      - lastTransitionTime: null
        message: ""
        reason: ListenerSetsNotAllowed
        status: Unknown
        type: AttachedListenerSets
      - lastTransitionTime: null
        message: Successfully accepted Gateway
        reason: Accepted
        status: "True"
        type: Accepted
      - lastTransitionTime: null
        message: Successfully programmed Gateway
        reason: Programmed
        status: "True"
        type: Programmed
      listeners:
      - attachedRoutes: 1
        conditions:
        - lastTransitionTime: null
          message: Successfully accepted Listener
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully verified that Listener has no conflicts
          reason: NoConflicts
          status: "False"
          type: Conflicted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: Successfully programmed Listener
          reason: Programmed
          status: "True"
          type: Programmed
        name: http
        supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
      - attachedRoutes: 1
        conditions:
        - lastTransitionTime: null
          message: Successfully accepted Listener
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully verified that Listener has no conflicts
          reason: NoConflicts
          status: "False"
          type: Conflicted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: null
          message: Successfully programmed Listener
          reason: Programmed
          status: "True"
          type: Programmed
        name: http2
        supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
  httpRoutes:
    default/example-route:
      parents:
      - conditions:
        - lastTransitionTime: null
          message: Successfully accepted Route
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Successfully resolved all references
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        controllerName: kgateway
        parentRef:
          group: ""
          kind: ""
          name: example-gateway
  policies:
    ListenerPolicy/default/rbac-network-per-port:
      ancestors:
      - ancestorRef:
          group: gateway.networking.k8s.io
          kind: Gateway
          name: example-gateway
          namespace: default
        conditions:
        - lastTransitionTime: null
          message: Policy accepted
          reason: Valid
          status: "True"
          type: Accepted
        - lastTransitionTime: null
          message: Attached to all targets
          reason: Attached
          status: "True"
          type: Attached
        controllerName: kgateway.dev/kgateway
